tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP53ErrorReportingTests#PHP53ErrorReportingTests(String[]).mjava
	public PHP53ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

